# coding_yusha

./: .flake8  Pipfile  README.md  coding_yusha.py  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
coding_yusha/: hello.py
coding_yusha/assets/hello_world/: info.yml  nop.py  nop.yml  warrior.yml
coding_yusha/assets/test/: ally_01.py  ally_01.yml  ally_02.py  ally_02.yml  enemy_01.py  enemy_01.yml  enemy_01_damaged.yml  enemy_01_guarded.yml  info.yml  not_enough.yml  success.yml
coding_yusha/assets/test/allies_dead/: ally_dead.py  enemy_01.py  info.yml
coding_yusha/assets/test/allies_key_not_found/: info.yml
coding_yusha/assets/test/ally_yml_not_found/: info.yml
coding_yusha/assets/test/an_ally_is_dead/: ally_01.py  ally_dead.py  ally_dead.yml  info.yml
coding_yusha/assets/test/an_enemy_is_dead/: enemy_01.py  enemy_01.yml  enemy_dead.py  enemy_dead.yml  info.yml
coding_yusha/assets/test/battle/: attacker.py  attacker.yml  info.yml  nop.py  nop.yml
coding_yusha/controller/: game_master.py  test_game_master.py
coding_yusha/controller/core/: attach_parameters_for_unit.py  create_unit_from_yml.py  event.py  field.py  generate_unit.py  initialize_field.py  parse_assets.py  proceed_event.py  test_attach_parameters_for_unit.py  test_create_unit_from_yml.py  test_field.py  test_generate_unit.py  test_initialize_field.py  test_parse_assets.py  test_proceed_event.py  test_unit.py  unit.py
doc/: architecture.md
src/: hello.py
tests/: hello_test.py
workshop/hello_world/: test_warrior.py  warrior.py
(+10 files in other folders)
