[tool.poetry]
name = "coding-yusha"
version = "0.1.0"
description = ""
authors = ["Koya Hirata <atarih.ayuok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
pytest = "7.4.*"
autopep8 = "^2.0.4"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
